@@ -1,3 +1,4 @@
+    - treat undefined constants as null (Ferdinand Beyer, Monte)
     - fix problem with inserts and nested fetches
       (Rainer Collet, Monte)
     - added support for passing params to include_php
